# fastmcp-openapi

./: .bumpversion.cfg  .gitignore  .pre-commit-config.yaml  CHANGELOG.md  README.md  pyproject.toml
.github/workflows/: release.yml  test.yml
docker/: Dockerfile  build
docs/: architecture.md  example-from-test.md  publish-package.md  technical-notes.md
examples/: demo_server.py  openapi.json
src/fastmcp_openapi/: __init__.py  config.py  decorators.py  extractor.py  routes.py  templates.py
tests/: test_fastmcp_openapi.py
